examples/test/conf/GRPCRoute/Basic/GRPCRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: test-grpc
  namespace: edgion-test
spec:
  parentRefs:
    - name: grpc-test-gateway
      namespace: edgion-test
      sectionName: grpc

  hostnames:
    - "grpc.example.com"

  rules:
    # 规则1: 匹配 test.TestService 的所有方法
    - matches:
        - method:
            type: Exact
            service: test.TestService
      backendRefs:
        - name: test-grpc
          port: 30021

    # 规则2: 匹配 test.TestService.SayHello 方法
    - matches:
        - method:
            type: Exact
            service: test.TestService
            method: SayHello
      backendRefs:
        - name: test-grpc
          port: 30021
